--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,13 @@
       <h1>
         <a href="/">Tech Talk</a>
       </h1>
+      <nav>
+          <a href="/login">login</a>>
+      </nav>
+       <nav>
+  <button id="logout" class="btn-no-style">logout</button>
+  <a href="/login">login</a>
+</nav>
     </header>
     <main>
       {{{ body }}}
@@ -22,7 +29,7 @@
       Please check the latest tech updates on Tech Talk!
     </footer>
   </div>
-
+ <script src="/javascript/logout.js"></script>
 </body>
 
 </html>
